# rex_axum_sdk

./: Cargo.toml  README.md
examples/: basic_usage.rs  database_usage.rs  fcm_sender.rs  firebase_auth.rs  jwt_server.rs
src/: lib.rs
src/fcm_messaging/: mod.rs
src/firebase_auth/: mod.rs
src/scheduler/: mod.rs
src/sqlx/: mod.rs
src/utilty/: mod.rs
