[package]
name = "rex_axum_sdk"
version = "0.1.0"
edition = "2021"
[lib]
name = "rex_axum_sdk" # 這個決定了你的函式庫在其他專案引入時的名稱
crate-type = ["lib"]  # 這個決定了編譯的目標類型
[dependencies]
tokio = { version = "1.28.2", features = ["full"] }
tracing = "0.1.40"
tokio-cron-scheduler = "0.9.4"
tracing-subscriber = "0.3.18"
serde = { version = "1.0.203", features = ["derive"] }
serde_json = "1.0"
sqlx = { version = "0.7.1", features = [
    "runtime-tokio",
    "chrono",
    "postgres",
    "macros",
] }
reqwest = { version = "0.12.4", features = ["json"] }
chrono = { version = "0.4", features = ["serde"] }
axum = "0.7.4"
hyper = "1.3.1"
jsonwebtoken = "9.3.0"
async-trait = "0.1.81"
